doc(changelog): add info about SpEL expression evaluation and JDK 17